--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <title>Page Not Found</title>
     <script type="text/javascript">
       // Redirect all requests to the root HTML file
-      window.location.href = '/my-react-app-with-ts/';
+      window.location.href = '/eduardo-juarez-app/';
     </script>
   </head>
   <body>
